--- a/TEXT/text.css
+++ b/TEXT/text.css
@@ -1,3 +1,15 @@
+body {
+  /* background-image: url(tree.png);
+  background-repeat: no-repeat;
+  background-size: 50%; */
+  /* background-position-x: right; */
+  /* background-position-y: -50%; */
+  /* background-position: right -100%; */
+
+  /* Background shorthand */
+  background: url(tree.png) no-repeat right bottom; 
+}
+
 h1 {
   color: blue;
   font-size: 80px;
@@ -32,4 +44,28 @@ h1 {
   word-spacing: 5px;
   line-height: 50px;
   /* white-space: break-word; */
+}
+
+.unordered-list {
+  font-size: 30px;
+  list-style-type: none;
+  list-style-position: outside;
+}
+
+ol {
+  font-size: 30px;
+  list-style-type: lower-roman;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 10px;
+}
+
+table td {
+  border: 1px solid black;
+}
+
+table th {
+  border: 1px solid black;
 }
