--- a/TEXT/text.css
+++ b/TEXT/text.css
@@ -7,7 +7,7 @@ body {
   /* background-position: right -100%; */
 
   /* Background shorthand */
-  background: url(tree.png) no-repeat right bottom; 
+  /* background: url(tree.png) no-repeat right bottom;  */
 }
 
 h1 {
@@ -30,14 +30,25 @@ h1 {
   font-size: 30px;
   font-weight: 300;
   text-align: center;
+  margin-top: -50px;
   /* text-transform: capitalize; */
 }
 
 .text {
   width: 500px;
+  box-sizing: border-box;
   /* text-decoration: overline; */
-  border: solid 1px blue;
-  padding: 10px;
+  /* border: solid 1px blue; */
+  /* border-style: solid dotted dashed solid; */
+  /* border-style: dashed;
+  border-width: 5px;
+  border-color: grey; */
+
+  border: 2px solid grey;
+  border-radius: 5px;
+  padding: 100px;
+
+  margin: 150px 0;
 
   text-indent: 50px;
   letter-spacing: 2px;
@@ -47,6 +58,7 @@ h1 {
 }
 
 .unordered-list {
+  /* margin-top: 300px; */
   font-size: 30px;
   list-style-type: none;
   list-style-position: outside;
@@ -68,4 +80,10 @@ table td {
 
 table th {
   border: 1px solid black;
+}
+
+.custom {
+  background-color: red;
+  height: inherit;
+  width: 100%;
 }
